--- a/src/components/games/HeadsOrTails.module.css
+++ b/src/components/games/HeadsOrTails.module.css
@@ -7,7 +7,7 @@
 }
 
 .coin.flipping {
-  animation: flip 1s linear;
+  animation: flip 1s linear infinite;
 }
 
 .side {
@@ -33,7 +33,7 @@
 
 @keyframes flip {
   0% { transform: rotateY(0); }
-  100% { transform: rotateY(1800deg); }
+  100% { transform: rotateY(360deg); }
 }
 
 .coin.heads {
